--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ df_elife_train_clean.csv
 elife_summaries.txt
 elife_test_reference.txt
 elife_references.txt
+elife_summaries100.txt
+.gitignore
+evaluation/evaluation_results.csv
+elife_summaries100.txt
+
