--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,5 @@
 data/
-Cell output 39 \[DW].csv
 project copy.ipynb
-elife.txt
-elife_test.txt
-elife_val.txt
-df_elife_clean.csv
-df_elife_train_clean.csv
-elife_summaries.txt
-elife_test_reference.txt
-elife_references.txt
-elife_summaries100.txt
-.gitignore
-evaluation/evaluation_results.csv
-elife_summaries100.txt
-
+*.csv
+*.txt
+*.json
