--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,18 @@ project copy.ipynb
 *.txt
 *.json
 evaluation/results.csv
+pegasus_xsum/model.safetensors
+pegasus_xsum/spiece.model
+pegasus_xsum/training_args.bin
+pegasus_xsum/checkpoint-4294/model.safetensors
+pegasus_xsum/checkpoint-4294/optimizer.pt
+pegasus_xsum/checkpoint-4294/rng_state.pth
+pegasus_xsum/checkpoint-4294/scheduler.pt
+pegasus_xsum/checkpoint-4294/spiece.model
+pegasus_xsum/checkpoint-4294/training_args.bin
+pegasus_xsum/checkpoint-6441/model.safetensors
+pegasus_xsum/checkpoint-6441/optimizer.pt
+pegasus_xsum/checkpoint-6441/rng_state.pth
+pegasus_xsum/checkpoint-6441/scheduler.pt
+pegasus_xsum/checkpoint-6441/spiece.model
+pegasus_xsum/checkpoint-6441/training_args.bin
