--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,29 @@ pegasus_large_model_x2/
 *.txt
 evaluation_results.csv
 *.bin
+pegasus_xsum/config.json
+pegasus_xsum/generation_config.json
+pegasus_xsum/model.safetensors
+pegasus_xsum/special_tokens_map.json
+pegasus_xsum/spiece.model
+pegasus_xsum/tokenizer_config.json
+pegasus_xsum/checkpoint-4294/config.json
+pegasus_xsum/checkpoint-4294/generation_config.json
+pegasus_xsum/checkpoint-4294/model.safetensors
+pegasus_xsum/checkpoint-4294/optimizer.pt
+pegasus_xsum/checkpoint-4294/rng_state.pth
+pegasus_xsum/checkpoint-4294/scheduler.pt
+pegasus_xsum/checkpoint-4294/special_tokens_map.json
+pegasus_xsum/checkpoint-4294/spiece.model
+pegasus_xsum/checkpoint-4294/tokenizer_config.json
+pegasus_xsum/checkpoint-4294/trainer_state.json
+pegasus_xsum/checkpoint-6441/config.json
+pegasus_xsum/checkpoint-6441/generation_config.json
+pegasus_xsum/checkpoint-6441/model.safetensors
+pegasus_xsum/checkpoint-6441/optimizer.pt
+pegasus_xsum/checkpoint-6441/rng_state.pth
+pegasus_xsum/checkpoint-6441/scheduler.pt
+pegasus_xsum/checkpoint-6441/special_tokens_map.json
+pegasus_xsum/checkpoint-6441/spiece.model
+pegasus_xsum/checkpoint-6441/tokenizer_config.json
+pegasus_xsum/checkpoint-6441/trainer_state.json
