archive all the old data files add new validation summaries

--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,37 @@
-data/
-Cell output 39 \[DW].csv
 project copy.ipynb
 elife.txt
 pegasus_large_model/
 pegasus_large_model_x2/
-*.txt
 evaluation_results.csv
 *.bin
-pegasus_xsum/config.json
-pegasus_xsum/generation_config.json
-pegasus_xsum/model.safetensors
-pegasus_xsum/special_tokens_map.json
-pegasus_xsum/spiece.model
-pegasus_xsum/tokenizer_config.json
-pegasus_xsum/checkpoint-4294/config.json
-pegasus_xsum/checkpoint-4294/generation_config.json
-pegasus_xsum/checkpoint-4294/model.safetensors
-pegasus_xsum/checkpoint-4294/optimizer.pt
-pegasus_xsum/checkpoint-4294/rng_state.pth
-pegasus_xsum/checkpoint-4294/scheduler.pt
-pegasus_xsum/checkpoint-4294/special_tokens_map.json
-pegasus_xsum/checkpoint-4294/spiece.model
-pegasus_xsum/checkpoint-4294/tokenizer_config.json
-pegasus_xsum/checkpoint-4294/trainer_state.json
-pegasus_xsum/checkpoint-6441/config.json
-pegasus_xsum/checkpoint-6441/generation_config.json
-pegasus_xsum/checkpoint-6441/model.safetensors
-pegasus_xsum/checkpoint-6441/optimizer.pt
-pegasus_xsum/checkpoint-6441/rng_state.pth
-pegasus_xsum/checkpoint-6441/scheduler.pt
-pegasus_xsum/checkpoint-6441/special_tokens_map.json
-pegasus_xsum/checkpoint-6441/spiece.model
-pegasus_xsum/checkpoint-6441/tokenizer_config.json
-pegasus_xsum/checkpoint-6441/trainer_state.json
+pegasus_xsum/
+old/
+data/
+project_messy.ipynb
+
+evaluation/elife_summaries100.txt
+data/PLOS/tfidf_summaries/
+data/PLOS/cleaned/
+data/PLOS/cleaned_staged/
+data/PLOS/converted/
+data/PLOS_json/test-00000-of-00001.json
+data/PLOS_json/train-00000-of-00003.json
+data/PLOS_json/train-00001-of-00003.json
+data/PLOS_json/train-00002-of-00003.json
+data/PLOS_json/validation-00000-of-00001.json
+data/elife_json/test_data.json
+data/elife_json/test-00000-of-00001.json
+data/elife_json/train-00000-of-00001.json
+data/elife_json/validation-00000-of-00001.json
+data/Elife/cleaned/test-00000-of-00001_clean.json
+data/Elife/cleaned/train-00000-of-00001_clean.json
+data/Elife/cleaned/validation-00000-of-00001_clean.json
+data/Elife/converted/elife.json
+data/Elife/tfidf_summaries/test_data_clean_tfidf.json
+data/Elife/tfidf_summaries/test-00000-of-00001_clean_tfidf.json
+data/Elife/tfidf_summaries/train-00000-of-00001_clean_tfidf.json
+data/Elife/tfidf_summaries/validation-00000-of-00001_clean_tfidf.json
+data/PLOS/clean_staged/test-00000-of-00001_clean.json
+data/PLOS/clean_staged/train-00001-of-00003_clean.json
+data/PLOS/clean_staged/train-00002-of-00003_clean.json
+data/PLOS/clean_staged/validation-00000-of-00001_clean.json
