update text files

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ data/PLOS/clean_staged/test-00000-of-00001_clean.json
 data/PLOS/clean_staged/train-00001-of-00003_clean.json
 data/PLOS/clean_staged/train-00002-of-00003_clean.json
 data/PLOS/clean_staged/validation-00000-of-00001_clean.json
+validation/elife_clean_100.csv
