--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ validation/elife_clean_tfidf_val_50.json
 validation/elife_clean_tfidf_val_50.txt
 validation/elife_val_50.txt
 results_elife_50.csv
+python_scripts/jen.py
