--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,27 @@ validation/elife_val_50.txt
 results_elife_50.csv
 python_scripts/jen.py
 jen.py
+lora_pegasus_elife/checkpoint-3000/adapter_config.json
+lora_pegasus_elife/checkpoint-3000/adapter_model.safetensors
+lora_pegasus_elife/checkpoint-3000/optimizer.pt
+lora_pegasus_elife/checkpoint-3000/README.md
+lora_pegasus_elife/checkpoint-3000/rng_state.pth
+lora_pegasus_elife/checkpoint-3000/scaler.pt
+lora_pegasus_elife/checkpoint-3000/scheduler.pt
+lora_pegasus_elife/checkpoint-3000/special_tokens_map.json
+lora_pegasus_elife/checkpoint-3000/spiece.model
+lora_pegasus_elife/checkpoint-3000/tokenizer_config.json
+lora_pegasus_elife/checkpoint-3000/tokenizer.json
+lora_pegasus_elife/checkpoint-3000/trainer_state.json
+lora_pegasus_elife/checkpoint-3261/adapter_config.json
+lora_pegasus_elife/checkpoint-3261/adapter_model.safetensors
+lora_pegasus_elife/checkpoint-3261/optimizer.pt
+lora_pegasus_elife/checkpoint-3261/README.md
+lora_pegasus_elife/checkpoint-3261/rng_state.pth
+lora_pegasus_elife/checkpoint-3261/scaler.pt
+lora_pegasus_elife/checkpoint-3261/scheduler.pt
+lora_pegasus_elife/checkpoint-3261/special_tokens_map.json
+lora_pegasus_elife/checkpoint-3261/spiece.model
+lora_pegasus_elife/checkpoint-3261/tokenizer_config.json
+lora_pegasus_elife/checkpoint-3261/tokenizer.json
+lora_pegasus_elife/checkpoint-3261/trainer_state.json
